 
 Bug fixes:

   - AccountsChart: fix reordering of children of a renumbered account (todo #1104).
   - AccountSelect, OpeTemplateSelect: fix hub finalization (todo #1106).
   - EntryPage: check strings before compare (todo #1113). 
   - FormulaEngine: fix nested parenthese evaluation (todo #1107).
   - IExportable/IImportable types: have BAT files at end of the list (todo #1125).
   - Periodicity: fix 31 day label (todo #1118).

 Other changes:

   - ofa_account_frame_bin_get_account_store(): new method.
   - ofa_ope_template_frame_bin_get_ope_template_store(): new method.
   - myIWindow::hide_on_close: removed property (todo #1111).

-----------------------------------------------------------------------
 Version 0.56
 ============

 Released on 2016-05-01
  
 New features and improvements:

   - Main notebook's pages are now detachable (todo #668), and re-attachable.
   - ofaDossierOpen: open in read-only mode (todo #701).
   - ofaFormulaEngine: accepts a variable count of arguments.
   - ofaTVARecordProperties: set the auto-eval mode to True.
   - ofsOpe: set again the auto-eval mode to False, only using %EVAL() function.
   - ofoTVARecord: improve data control.
   - ofoTVARecord: distinguish between correspondence and notes.
   - ofoTVARecord: generate entries at validation time. 
   - ofoEntry: new versioned import-export format, including operation number.
 
 Bug fixes:

   - Fix 'Closing period' menu item sensitivity when dossier is read-only.
   - ofaExerciceCloseAssistant: only run user prefs after closing assistant
     (and new properties have been set).
   - Fix crash of account and operation template selection after initial
     caller has been closed.

 Other changes:

   - myDndPopup: new class which manages both the icon and the dnd destination.
   - myDndWindow: new class which manages the child windows.
   - myBookDnd: class is renamed to myDndBook.
   - ofa_hub_dossier_is_writable(): new method.